--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,9 @@ li {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    opacity: 0; 
+    transform: translateY(-20px); 
+    transition: opacity 0.5s, transform 0.5s;
 }
 li.completed {
     text-decoration: linen;
@@ -51,4 +54,51 @@ li button {
 }
 li button:hover {
     background-color: #c82333;
+}
+#category-input {
+    width: 165px;
+    padding: 10px 8px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+li.show { 
+    opacity: 1; 
+    transform: translateY(0); 
+}
+
+
+#priority-input {
+    width: 150px;
+    padding: 10px 8px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+#filter {
+    width: 150px;
+    padding: 10px 8px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+#display {
+    width: 150px;
+    padding: 10px 8px;
+    background-color: #28a745;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+li.hide { 
+    opacity: 1; 
+    transform: translateY(0); 
 }
